--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -130,6 +130,13 @@ h4 {
   line-height: 1.5em;
 }
 
+/* line 46, ../sass/_base.scss */
+.sub {
+  font-size: 0.6em;
+  line-height: 2.667em;
+  font-style: italic;
+}
+
 /* --------------------------------------------------------------------
    Colors
 -------------------------------------------------------------------- */
@@ -139,7 +146,7 @@ h4 {
 /* --------------------------------------------------------------------
    Global
 -------------------------------------------------------------------- */
-/* line 82, ../sass/_base.scss */
+/* line 84, ../sass/_base.scss */
 body {
   font-family: "adobe-garamond-pro", Georgia, serif;
   -webkit-font-smoothing: antialiased;
@@ -148,12 +155,12 @@ body {
   border-top: 0.2em solid #ff3300;
 }
 
-/* line 90, ../sass/_base.scss */
+/* line 92, ../sass/_base.scss */
 img, object {
   max-width: 100%;
 }
 
-/* line 94, ../sass/_base.scss */
+/* line 96, ../sass/_base.scss */
 a {
   color: #ff3300;
   text-decoration: none;
@@ -163,28 +170,28 @@ a {
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
-/* line 98, ../sass/_base.scss */
+/* line 100, ../sass/_base.scss */
 a:hover {
   text-decoration: underline;
 }
 
-/* line 103, ../sass/_base.scss */
+/* line 105, ../sass/_base.scss */
 p {
   margin-bottom: 1.6em;
 }
 
-/* line 107, ../sass/_base.scss */
+/* line 109, ../sass/_base.scss */
 em {
   font-style: italic;
 }
 
-/* line 111, ../sass/_base.scss */
+/* line 113, ../sass/_base.scss */
 ::selection {
   background: #cccccc;
   /* Safari */
 }
 
-/* line 114, ../sass/_base.scss */
+/* line 116, ../sass/_base.scss */
 ::-moz-selection {
   background: #cccccc;
   /* Firefox */
@@ -324,7 +331,7 @@ article.hi {
 article.hi h2 {
   font-style: italic;
 }
-/* line 69, ../sass/_base.scss */
+/* line 71, ../sass/_base.scss */
 article.hi h2::after {
   content: ' ';
   display: block;
@@ -345,7 +352,7 @@ article.hi h2::after {
   display: inline;
   text-align: center;
 }
-/* line 69, ../sass/_base.scss */
+/* line 71, ../sass/_base.scss */
 .bio::after {
   content: ' ';
   display: block;
@@ -390,6 +397,7 @@ article.hi h2::after {
   float: left;
   margin-right: 1.695%;
   display: inline;
+  margin-top: 0.8em;
   opacity: 0.66;
   -webkit-transition-duration: 0.2s;
   -moz-transition-duration: 0.2s;
@@ -404,15 +412,20 @@ article.hi h2::after {
   #margin-left: -0.5em;
   display: inline;
 }
-/* line 137, ../sass/screen.scss */
+/* line 138, ../sass/screen.scss */
 .project:hover {
   opacity: 1;
+}
+/* line 141, ../sass/screen.scss */
+.project h4 {
+  line-height: 1;
+  margin-bottom: -0.45em;
 }
 
 /* --------------------------------------------------------------------
    Misc
 -------------------------------------------------------------------- */
-/* line 146, ../sass/screen.scss */
+/* line 151, ../sass/screen.scss */
 article.coming-soon h1 {
   margin-bottom: 1.6em;
   text-align: center;
@@ -441,27 +454,36 @@ article.coming-soon h1 {
 }
 /* < 875px */
 @media screen and (max-width: 875px) {
-  /* line 176, ../sass/screen.scss */
+  /* line 181, ../sass/screen.scss */
   .container {
     max-width: 24em;
   }
 
-  /* line 179, ../sass/screen.scss */
+  /* line 184, ../sass/screen.scss */
   img#logo {
     position: inherit;
     margin-bottom: 0.25em;
   }
 
-  /* line 183, ../sass/screen.scss */
+  /* line 188, ../sass/screen.scss */
   h1 {
     font-size: 2.095em;
     line-height: 1.545em;
   }
 
-  /* line 184, ../sass/screen.scss */
+  /* line 189, ../sass/screen.scss */
   h2 {
     font-size: 1.238em;
     line-height: 1.308em;
+  }
+
+  /* line 190, ../sass/screen.scss */
+  .project {
+    width: 100%;
+    float: right;
+    margin-right: 0;
+    #margin-left: -0.5em;
+    display: inline;
   }
 }
 /* < 490px */
@@ -472,7 +494,7 @@ article.coming-soon h1 {
     line-height: 1.5em;
   }
 
-  /* line 193, ../sass/screen.scss */
+  /* line 201, ../sass/screen.scss */
   .container {
     padding: 0 0.75em;
   }
