--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <title> {% if page.title %} {{ page.title }} | {% endif %} Mikey Wills</title>
     <link rel="stylesheet" type="text/css" media="screen, projection" href="/stylesheets/screen.css" />
+    <link rel="stylesheet" href="/fonts/ss-standard.css" />
 <!-- Typekit -->   
     <script type="text/javascript" src="http://use.typekit.com/ogx4moy.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
