Add write me section below bio on about page

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -53,7 +53,7 @@ $primary: #FF3300;
 $black: #222;
 $mid-grey: #666;
 $grey-shdw: #AAA;
-$grey: #CCC;
+$grey: #D9D9D9;
 $white: #FDFDFD;
 
 /* --------------------------------------------------------------------
