--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -49,12 +49,14 @@ h4 { @include adjust-font-size-to(26px); font-family: $title; font-weight: 400;}
    Colors
 -------------------------------------------------------------------- */
 
-$primary: #FF3300;
-$black: #222;
-$mid-grey: #666;
-$grey-shdw: #AAA;
-$grey: #D9D9D9;
-$white: #FDFDFD;
+$primary: rgba(137, 253, 194, 1.0);    // teal
+$drk-primary: rgba(32, 51, 41, 1.0);   // dark teal
+$secondary: rgba(250, 41, 0, 1.0);     // red
+$mid-black: rgba(68, 68, 68, 1.0);     // #444
+$grey: rgba(236, 240, 238, 1.0);       // light teal grey
+$grey-shdw: rgba(191, 197, 194, 1.0);  // dark teal grey
+$white: rgba(253, 253, 253, 1.0);      // #fdfdfd
+$black: rgba(51, 51, 51, 1.0);         // #333
 
 /* --------------------------------------------------------------------
    Mixins
@@ -72,7 +74,7 @@ $white: #FDFDFD;
     content: ' ';
     display: block;
     width: $width;
-    border-top: 1px dashed $grey;
+    border-top: 1px dashed $secondary;
     margin: 1em auto 1em auto;
   }
 }
@@ -86,7 +88,17 @@ body {
   -webkit-font-smoothing: antialiased;
   color: $black;
   background: $white;
-  border-top: 0.2em solid $primary;
+  border-top: 0.3em solid $primary;
+}
+
+p {
+  color: $mid-black;
+  a {
+    color: $secondary;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 img, object {
@@ -94,11 +106,11 @@ img, object {
 }
 
 a {
-  color: $primary;
+  color: $black;
   text-decoration: none;
   @include transition-duration(0.2s);
   &:hover {
-    text-decoration: underline;
+    color: $secondary;
   }
 }
 
@@ -111,8 +123,8 @@ em {
 }
 
 ::selection {
-  background: $grey; /* Safari */
+  background: $primary; /* Safari */
   }
 ::-moz-selection {
-  background: $grey; /* Firefox */
+  background: $primary; /* Firefox */
 }
